Fix problemas con traducciones y icono favicon registro.html

--- a/login.html
+++ b/login.html
@@ -52,16 +52,16 @@
                 <button type="submit" class="btn-login" style="width:100%; margin-top:1rem;" data-i18n="btn_enter">Entrar al Panel</button>
             </form>
         <div style="margin-top: 1.5rem; text-align: center; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 1rem;">
-            <p style="color: var(--text-muted); font-size: 0.9rem;">¿Nuevo en el Lab?</p>
+            <p style="color: var(--text-muted); font-size: 0.9rem;" data-i18n="text_new_lab">¿Nuevo en el Lab?</p>
             <a href="registro" class="btn-submit" style="background: transparent; border: 1px solid var(--primary); color: white; margin-top: 0.5rem; padding: 0.5rem 1rem; width: 100%; text-decoration: none; display: inline-block;">
-                Crear Cuenta
+                <span data-i18n="btn_create_account">Crear Cuenta</span>
             </a>
         </div>
         </div>
     </div>
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
+            <p data-i18n="footer_text">&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
             
             <p style="margin-top: 0.5rem; font-size: 0.9rem;">
                 <i class='bx bx-envelope'></i> 
@@ -72,7 +72,7 @@
 
             <div class="social-links">
                 <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
-                    <i class='bx bxl-github'></i> Código Fuente
+                    <i class='bx bxl-github'></i> <span data-i18n="footer_source">Código Fuente</span>
                 </a>
             </div>
         </div>
