--- a/registro.html
+++ b/registro.html
@@ -6,6 +6,7 @@
     <title>Crear Cuenta - SecurityShield</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/shield.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://securityshield.es/registro">
     <meta property="og:title" content="Crear Cuenta - SecurityShield">
@@ -67,7 +68,7 @@
     </div>
         <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
+            <p data-i18n="footer_text">&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
             
             <p style="margin-top: 0.5rem; font-size: 0.9rem;">
                 <i class='bx bx-envelope'></i> 
@@ -78,7 +79,7 @@
 
             <div class="social-links">
                 <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
-                    <i class='bx bxl-github'></i> Código Fuente
+                    <i class='bx bxl-github'></i> <span data-i18n="footer_source">Código Fuente</span>
                 </a>
             </div>
         </div>
