Indexacion arreglada y favicon nuevo

--- a/planes.html
+++ b/planes.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planes - SecurityShield</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" type="image/png" href="images/shield.png">
-    <link rel="stylesheet" href="css/style.css">    
+    <link rel="icon" type="image/jpg" href="https://securityshield.es/images/shield_g.jpg">
+    <link rel="stylesheet" href="css/style.css">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://securityshield.es/planes">
     <meta property="og:title" content="Planes de Ciberseguridad - SecurityShield">
-    <meta property="og:description" content="Elige tu nivel de protección: Desde auditorías gratuitas hasta defensa empresarial completa con AppArmor y Bastionado.">
+    <meta property="og:description"
+        content="Elige tu nivel de protección: Desde auditorías gratuitas hasta defensa empresarial completa con AppArmor y Bastionado.">
     <meta property="og:image" content="https://securityshield.es/images/social-preview.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://securityshield.es/planes">
     <meta property="twitter:title" content="Planes de Ciberseguridad - SecurityShield">
-    <meta property="twitter:description" content="Elige tu nivel de protección: Desde auditorías gratuitas hasta defensa empresarial completa.">
+    <meta property="twitter:description"
+        content="Elige tu nivel de protección: Desde auditorías gratuitas hasta defensa empresarial completa.">
     <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
+    <link rel="canonical" href="https://securityshield.es/planes">
 </head>
+
 <body>
 
     <nav class="navbar">
@@ -41,8 +46,10 @@
     </nav>
 
     <main class="container">
-        <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 1rem;" data-i18n="page_planes_title">Nuestros Planes</h2>
-        <p style="text-align: center; color: var(--text-muted);" data-i18n="page_planes_subtitle">Escalabilidad desde la auditoría básica hasta la contención total.</p>
+        <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 1rem;" data-i18n="page_planes_title">Nuestros
+            Planes</h2>
+        <p style="text-align: center; color: var(--text-muted);" data-i18n="page_planes_subtitle">Escalabilidad desde la
+            auditoría básica hasta la contención total.</p>
 
         <div class="pricing-grid">
             <div class="glass-card plan-card">
@@ -50,28 +57,38 @@
                 <div class="plan-price" data-i18n="plan_personal_price">Gratis</div>
                 <p data-i18n="plan_personal_desc">Ideal para diagnósticos iniciales.</p>
                 <ul class="plan-features">
-                    <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_audit">Auditoría de Puertos Nmap</span></li>
-                    <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_report">Informe de Exposición</span></li>
-                    <li><i class='bx bx-x' style="color: #666;"></i> <span data-i18n="feat_no_armor">Sin Hardening AppArmor</span></li>
-                    <li><i class='bx bx-x' style="color: #666;"></i> <span data-i18n="feat_support">Soporte Básico</span></li>
+                    <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_audit">Auditoría de Puertos Nmap</span>
+                    </li>
+                    <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_report">Informe de Exposición</span>
+                    </li>
+                    <li><i class='bx bx-x' style="color: #666;"></i> <span data-i18n="feat_no_armor">Sin Hardening
+                            AppArmor</span></li>
+                    <li><i class='bx bx-x' style="color: #666;"></i> <span data-i18n="feat_support">Soporte
+                            Básico</span></li>
                 </ul>
-                <a href="pasarela?plan=personal&precio=0" class="btn-submit" style="display:inline-block; text-align:center; background: transparent; border: 1px solid var(--primary); color: #fff; margin-top: 2rem; text-decoration: none;">
+                <a href="pasarela?plan=personal&precio=0" class="btn-submit"
+                    style="display:inline-block; text-align:center; background: transparent; border: 1px solid var(--primary); color: #fff; margin-top: 2rem; text-decoration: none;">
                     <span data-i18n="btn_request">Solicitar</span>
                 </a>
             </div>
 
             <div class="glass-card plan-card premium">
-                <div style="position: absolute; top: -15px; left: 50%; transform: translateX(-50%); background: var(--secondary); padding: 5px 15px; border-radius: 20px; font-size: 0.8rem;" data-i18n="badge_rec">RECOMENDADO</div>
+                <div style="position: absolute; top: -15px; left: 50%; transform: translateX(-50%); background: var(--secondary); padding: 5px 15px; border-radius: 20px; font-size: 0.8rem;"
+                    data-i18n="badge_rec">RECOMENDADO</div>
                 <h3 data-i18n="plan_business_title">Plan Empresarial</h3>
                 <div class="plan-price" data-i18n="plan_business_price">Consultar</div>
                 <p data-i18n="plan_business_desc">Defensa en profundidad completa.</p>
                 <ul class="plan-features">
-                    <li><i class='bx bxs-shield-check'></i> <strong data-i18n="feat_armor_custom">Perfiles AppArmor Custom</strong></li>
-                    <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_bastion">Bastionado SSH & SQL</span></li>
-                    <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_fw">Configuración Firewall UFW</span></li>
+                    <li><i class='bx bxs-shield-check'></i> <strong data-i18n="feat_armor_custom">Perfiles AppArmor
+                            Custom</strong></li>
+                    <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_bastion">Bastionado SSH & SQL</span>
+                    </li>
+                    <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_fw">Configuración Firewall UFW</span>
+                    </li>
                     <li><i class='bx bx-check-circle'></i> <span data-i18n="feat_sim">Simulación de Ataques</span></li>
                 </ul>
-                <a href="pasarela?plan=empresarial&precio=consultar" class="btn-submit" style="display:inline-block; text-align:center; margin-top: 2rem; text-decoration: none;">
+                <a href="pasarela?plan=empresarial&precio=consultar" class="btn-submit"
+                    style="display:inline-block; text-align:center; margin-top: 2rem; text-decoration: none;">
                     <span data-i18n="btn_hire">Contratar Escudo</span>
                 </a>
             </div>
@@ -80,16 +97,18 @@
     <footer class="footer">
         <div class="footer-content">
             <p>&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
-            
+
             <p style="margin-top: 0.5rem; font-size: 0.9rem;">
-                <i class='bx bx-envelope'></i> 
-                <a href="mailto:contact@securityshield.es" style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
+                <i class='bx bx-envelope'></i>
+                <a href="mailto:contact@securityshield.es"
+                    style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
                     contact@securityshield.es
                 </a>
             </p>
 
             <div class="social-links">
-                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
+                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank"
+                    rel="noopener noreferrer" title="Ver código fuente en GitHub">
                     <i class='bx bxl-github'></i> Código Fuente
                 </a>
             </div>
@@ -102,4 +121,5 @@
         });
     </script>
 </body>
+
 </html>
