--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SecureShield - Ciberseguridad y Servidores Linux en España</title>
-    <meta name="description" content="SecureShield ofrece soluciones de ciberseguridad, auditoría de servidores Linux y hardening con AppArmor en España. Protege tu infraestructura con defensa en profundidad.">
+    <meta name="description"
+        content="SecureShield ofrece soluciones de ciberseguridad, auditoría de servidores Linux y hardening con AppArmor en España. Protege tu infraestructura con defensa en profundidad.">
     <meta name="google-site-verification" content="1I3Blcix2SiJoX3-R6Cp4xLIqJGl29Q3ic8fjAnSzXU" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://securityshield.es/">
@@ -17,11 +19,13 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://securityshield.es/">
     <meta property="twitter:title" content="SecureShield - Ciberseguridad">
-    <meta property="twitter:description" content="Auditoría de sistemas, Hardening con AppArmor y defensa en profundidad.">
+    <meta property="twitter:description"
+        content="Auditoría de sistemas, Hardening con AppArmor y defensa en profundidad.">
     <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
-    <link rel="icon" type="image/png" href="images/shield.png">
+    <link rel="icon" type="image/jpg" href="https://securityshield.es/images/shield_g.jpg">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="canonical" href="https://securityshield.es/">
     <script type="application/ld+json">
     {
     "@context": "https://schema.org",
@@ -34,6 +38,7 @@
     }
     </script>
 </head>
+
 <body>
 
     <nav class="navbar">
@@ -59,7 +64,8 @@
 
     <main class="container hero">
         <h1 data-i18n="hero_title">Defensa en Profundidad</h1>
-        <p data-i18n="hero_text">Un usuario informado es la barrera más eficaz. Protegemos tu infraestructura con estrategias proactivas y auditorías avanzadas.</p>
+        <p data-i18n="hero_text">Un usuario informado es la barrera más eficaz. Protegemos tu infraestructura con
+            estrategias proactivas y auditorías avanzadas.</p>
         <a href="planes" class="btn-submit" style="display:inline-block; width:auto; padding: 1rem 3rem;">
             <span data-i18n="hero_btn">Ver Soluciones</span>
         </a>
@@ -70,33 +76,38 @@
             <div class="glass-card">
                 <i class='bx bx-radar feature-icon'></i>
                 <h3 data-i18n="feat_nmap_title">Auditoría Nmap</h3>
-                <p data-i18n="feat_nmap_text">Identificamos tu superficie de ataque visible antes de que lo hagan los ciberdelincuentes.</p>
+                <p data-i18n="feat_nmap_text">Identificamos tu superficie de ataque visible antes de que lo hagan los
+                    ciberdelincuentes.</p>
             </div>
             <div class="glass-card">
                 <i class='bx bx-lock-alt feature-icon'></i>
                 <h3 data-i18n="feat_armor_title">AppArmor Hardening</h3>
-                <p data-i18n="feat_armor_text">Contención de daños mediante perfiles de seguridad obligatorios. Tu servidor, blindado.</p>
+                <p data-i18n="feat_armor_text">Contención de daños mediante perfiles de seguridad obligatorios. Tu
+                    servidor, blindado.</p>
             </div>
             <div class="glass-card">
                 <i class='bx bx-key feature-icon'></i>
                 <h3 data-i18n="feat_ssh_title">Autenticación SSH</h3>
-                <p data-i18n="feat_ssh_text">Implementación de llaves criptográficas para eliminar el riesgo de las contraseñas débiles.</p>
+                <p data-i18n="feat_ssh_text">Implementación de llaves criptográficas para eliminar el riesgo de las
+                    contraseñas débiles.</p>
             </div>
         </div>
     </section>
     <footer class="footer">
         <div class="footer-content">
             <p>&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
-            
+
             <p style="margin-top: 0.5rem; font-size: 0.9rem;">
-                <i class='bx bx-envelope'></i> 
-                <a href="mailto:contact@securityshield.es" style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
+                <i class='bx bx-envelope'></i>
+                <a href="mailto:contact@securityshield.es"
+                    style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
                     contact@securityshield.es
                 </a>
             </p>
 
             <div class="social-links">
-                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank" rel="noopener noreferrer" title="Ver código fuente en GitHub">
+                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank"
+                    rel="noopener noreferrer" title="Ver código fuente en GitHub">
                     <i class='bx bxl-github'></i> Código Fuente
                 </a>
             </div>
@@ -111,4 +122,5 @@
         });
     </script>
 </body>
+
 </html>
