--- a/index.html
+++ b/index.html
@@ -105,10 +105,18 @@
                 </a>
             </p>
 
-            <div class="social-links">
+            <div class="social-links" style="display: flex; gap: 0.5rem; flex-wrap: wrap; justify-content: center;">
+                <a href="https://x.com/SecurityShield_" target="_blank" rel="noopener noreferrer" title="Instagram">
+                    <i class='bx bxl-instagram'></i>
+                </a>
+
+                <a href="https://x.com/SecurityShield_" target="_blank" rel="noopener noreferrer" title="Twitter / X">
+                    <i class='bx bxl-twitter'></i>
+                </a>
+
                 <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank"
                     rel="noopener noreferrer" title="Ver código fuente en GitHub">
-                    <i class='bx bxl-github'></i> Código Fuente
+                    <i class='bx bxl-github'></i> <span data-i18n="footer_source">Código Fuente</span>
                 </a>
             </div>
         </div>
