--- a/pasarela.html
+++ b/pasarela.html
@@ -157,6 +157,51 @@
             </div>
         </div>
     </footer>
+    <div id="techInfoModal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <h3>Configuración del Entorno</h3>
+            <p>Para prepararte el script de instalación, necesitamos unos datos básicos de tu servidor o máquina.</p>
+
+            <form id="techForm">
+                <div class="form-group">
+                    <label>Nombre (Cliente o Empresa)</label>
+                    <input type="text" id="clientName" required placeholder="Ej: TechSolutions SL">
+                </div>
+
+                <div class="form-group">
+                    <label>Sistema Operativo</label>
+                    <select id="clientOS" required>
+                        <option value="">Selecciona tu SO...</option>
+                        <option value="ubuntu">Ubuntu / Debian</option>
+                        <option value="centos">CentOS / RHEL</option>
+                        <option value="windows">Windows Server</option>
+                        <option value="macos">macOS</option>
+                        <option value="otro">Otro</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Arquitectura</label>
+                    <select id="clientArch" required>
+                        <option value="">Selecciona arquitectura...</option>
+                        <option value="x86_64">x86_64 (Intel/AMD 64-bit)</option>
+                        <option value="arm64">ARM64 (Apple Silicon, AWS Graviton)</option>
+                        <option value="x86">x86 (32-bit)</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Email de Contacto (para envío de scripts)</label>
+                    <input type="email" id="clientEmail" required placeholder="admin@tuequipo.com">
+                </div>
+
+                <div class="modal-buttons">
+                    <button type="button" class="btn-cancel" onclick="closeTechModal()">Cancelar</button>
+                    <button type="submit" class="btn-confirm">Confirmar y Pagar</button>
+                </div>
+            </form>
+        </div>
+    </div>
     <script src="js/payment.js"></script>
     <script src="js/translations.js"></script>
 </body>
