--- a/pasarela.html
+++ b/pasarela.html
@@ -117,8 +117,9 @@
                     </div>
                 </div>
 
-                <button type="submit" class="btn-submit"
+                <button type="button" id="pay-button" class="btn-submit"
                     style="width:100%; margin-top:1rem; display: flex; justify-content: center; gap: 10px;">
+
                     <span id="btn-text" data-i18n="btn_pay">Pagar y Activar</span>
                     <div class="spinner" id="spinner"></div>
                 </button>
