Actualizacion sin dashboard, gestion de usuarios propios

--- a/planes.html
+++ b/planes.html
@@ -33,7 +33,13 @@
             <li><a href="index" data-i18n="nav_inicio">Inicio</a></li>
             <li><a href="planes" class="active" data-i18n="nav_planes">Planes</a></li>
             <li><a href="contacto" data-i18n="nav_contacto">Contacto</a></li>
-            <li><a href="login" class="btn-login" data-i18n="nav_login">Acceso Lab</a></li>
+            <li><a href="login" style="font-weight: 600;">Iniciar Sesión</a></li>
+            <li>
+                <a href="registro.html" class="btn-login"
+                    style="background: var(--primary); color: #000; padding: 0.5rem 1rem; border-radius: 50px;">
+                    Registrarse
+                </a>
+            </li>
             <li>
                 <select id="language-selector" class="lang-select">
                     <option value="es">🇪🇸 ES</option>
