--- a/login.html
+++ b/login.html
@@ -4,96 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="title_login">Acceso - SecurityShield</title>
+    <title>Iniciar Sesión - SecurityShield</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" type="image/jpg" href="https://securityshield.es/images/shield_g.jpg">
     <link rel="stylesheet" href="css/style.css">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://securityshield.es/login">
-    <meta property="og:title" content="Acceso al Laboratorio - SecurityShield">
-    <meta property="og:description"
-        content="Inicia sesión o regístrate para acceder al panel de control y herramientas de auditoría.">
-    <meta property="og:image" content="https://securityshield.es/images/social-preview.jpg">
-
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://securityshield.es/login">
-    <meta property="twitter:title" content="Acceso al Laboratorio - SecurityShield">
-    <meta property="twitter:description" content="Inicia sesión o regístrate para acceder al panel de control.">
-    <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
+    <link rel="icon" type="image/jpg" href="images/shield_g.jpg">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="logo"><i class='bx bxs-shield-plus'></i> SecurityShield</div>
-
         <div style="display:flex; align-items:center; gap:1rem;">
-            <select id="language-selector" class="lang-select">
-                <option value="es">🇪🇸 ES</option>
-                <option value="en">🇬🇧 EN</option>
-                <option value="ca">🏴 CA</option>
-                <option value="eu">🏴 EU</option>
-            </select>
-            <a href="index" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
+            <a href="index.html" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
         </div>
     </nav>
 
     <div class="login-container">
         <div class="glass-card login-card">
-            <h2 style="margin-bottom: 1.5rem;" data-i18n="login_title">Iniciar Sesión</h2>
+            <h2 style="margin-bottom: 1.5rem; text-align: center;">Iniciar Sesión</h2>
 
             <form action="api/login.php" method="POST">
                 <div class="form-group">
-                    <label data-i18n="lbl_user">Usuario</label>
-                    <input type="email" name="email" class="form-input" placeholder="admin@secureshield.com" required>
+                    <label>Email</label>
+                    <input type="email" name="email" class="form-input" placeholder="usuario@ejemplo.com" required>
                 </div>
 
                 <div class="form-group">
-                    <label data-i18n="lbl_pass">Contraseña</label>
+                    <label>Contraseña</label>
                     <input type="password" name="password" class="form-input" placeholder="••••••••" required>
                 </div>
 
-                <button type="submit" class="btn-login" style="width:100%; margin-top:1rem;"
-                    data-i18n="btn_enter">Entrar al Panel</button>
+                <button type="submit" class="btn-login" style="width:100%; margin-top:1rem; cursor: pointer;">
+                    Entrar
+                </button>
             </form>
-            <div
-                style="margin-top: 1.5rem; text-align: center; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 1rem;">
-                <p style="color: var(--text-muted); font-size: 0.9rem;" data-i18n="text_new_lab">¿Nuevo en el Lab?</p>
-                <a href="registro" class="btn-submit"
-                    style="background: transparent; border: 1px solid var(--primary); color: white; margin-top: 0.5rem; padding: 0.5rem 1rem; width: 100%; text-decoration: none; display: inline-block;">
-                    <span data-i18n="btn_create_account">Crear Cuenta</span>
-                </a>
+
+            <div style="margin-top: 1.5rem; text-align: center;">
+                <p style="color: #94a3b8; font-size: 0.9rem;">¿No tienes cuenta?</p>
+                <a href="registro.html" style="color: #38bdf8; text-decoration: none;">Regístrate aquí</a>
             </div>
         </div>
     </div>
-    <footer class="footer">
-        <div class="footer-content">
-            <p data-i18n="footer_text">&copy; 2026 SecurityShield - Proyecto PIM - Defensa de Servidor Web</p>
-
-            <p style="margin-top: 0.5rem; font-size: 0.9rem;">
-                <i class='bx bx-envelope'></i>
-                <a href="mailto:contact@securityshield.es"
-                    style="color: rgba(255,255,255,0.7); text-decoration: none; transition: color 0.3s;">
-                    contact@securityshield.es
-                </a>
-            </p>
-
-            <div class="social-links" style="display: flex; gap: 0.5rem; flex-wrap: wrap; justify-content: center;">
-                <a href="https://x.com/SecurityShield_" target="_blank" rel="noopener noreferrer" title="Instagram">
-                    <i class='bx bxl-instagram'></i>
-                </a>
-
-                <a href="https://x.com/SecurityShield_" target="_blank" rel="noopener noreferrer" title="Twitter / X">
-                    <i class='bx bxl-twitter'></i>
-                </a>
-
-                <a href="https://github.com/secureshieldpim-tech/SecurityShield.pim" target="_blank"
-                    rel="noopener noreferrer" title="Ver código fuente en GitHub">
-                    <i class='bx bxl-github'></i> <span data-i18n="footer_source">Código Fuente</span>
-                </a>
-            </div>
-        </div>
-    </footer>
-    <script src="js/translations.js"></script>
 </body>
 
 </html>
