Acutalizacion logic.js index y planes

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             navLinks.classList.toggle('active');
         });
     </script>
+    <script src="js/logic.js"></script>
 </body>
 
 </html>
