--- a/planes.html
+++ b/planes.html
@@ -134,6 +134,7 @@
             document.getElementById('nav-links').classList.toggle('active');
         });
     </script>
+    <script src="js/logic.js"></script>
 </body>
 
 </html>
