Actualizacion diseño y nueva pagina de bienvenida

--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,7 @@
         <div class="logo"><i class='bx bxs-shield-plus'></i> SecurityShield</div>
         <div class="menu-toggle" id="mobile-menu"><i class='bx bx-menu'></i></div>
         <ul class="nav-links" id="nav-links">
-            <li><a href="index" data-i18n="nav_inicio">Inicio</a></li>
+            <li><a href="principal" data-i18n="nav_inicio">Inicio</a></li>
             <li><a href="planes" data-i18n="nav_planes">Planes</a></li>
             <li><a href="contacto" class="active" data-i18n="nav_contacto">Contacto</a></li>
             <li><a href="login" style="font-weight: 600;">Iniciar Sesión</a></li>
