--- a/registro.html
+++ b/registro.html
@@ -33,7 +33,7 @@
                 <option value="eu">🏴 EU</option>
             </select>
 
-            <a href="index" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
+            <a href="principal" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
         </div>
     </nav>
 
