--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="logo"><i class='bx bxs-shield-plus'></i> SecurityShield</div>
         <div style="display:flex; align-items:center; gap:1rem;">
-            <a href="index.html" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
+            <a href="principal.html" style="color: white; font-size: 1.5rem;"><i class='bx bx-x'></i></a>
         </div>
     </nav>
 
