Responsividad móvil, index.html

--- a/index.html
+++ b/index.html
@@ -160,14 +160,28 @@
 
         /* --- MÓVIL (Responsividad Mejorada) --- */
         @media (max-width: 768px) {
+            .content-wrapper {
+                width: 100%;
+                /* Asegura usar todo el ancho */
+                padding: 1rem;
+                /* Reducimos padding (antes era 2rem, que es mucho espacio perdido) */
+                box-sizing: border-box;
+                /* Crucial para que el padding no sume ancho extra */
+            }
+
             .main-icon {
-                font-size: 4.5rem;
+                font-size: 4rem;
+                /* Un poco más pequeño para que no domine tanto */
                 margin-bottom: 1rem;
             }
 
             h1 {
-                font-size: 2.8rem;
+                /* TRUCO CLAVE: Usar 'vw' (viewport width) en lugar de 'rem' */
+                /* Esto hace que el texto se encoja automáticamente si la pantalla es estrecha */
+                font-size: 11vw;
                 margin-bottom: 1.5rem;
+                word-wrap: break-word;
+                /* Por seguridad, si hay palabras muy largas */
             }
 
             .info-text {
@@ -175,6 +189,8 @@
                 line-height: 1.5;
                 gap: 1rem;
                 margin-bottom: 2.5rem;
+                padding: 0 10px;
+                /* Un poco de margen lateral para que no toque los bordes */
             }
 
             .btn-start {
@@ -184,8 +200,16 @@
             }
 
             .lang-floater {
-                top: 20px;
-                right: 20px;
+                top: 15px;
+                /* Subimos un poco el selector de idioma */
+                right: 15px;
+                /* Lo pegamos más a la derecha */
+            }
+
+            /* Ajuste para el selector en móvil */
+            .lang-select-welcome {
+                padding: 6px 12px;
+                font-size: 0.85rem;
             }
         }
     </style>
