--- a/registro.html
+++ b/registro.html
@@ -84,7 +84,8 @@
             </p>
 
             <div class="social-links" style="display: flex; gap: 0.5rem; flex-wrap: wrap; justify-content: center;">
-                <a href="https://x.com/SecurityShield_" target="_blank" rel="noopener noreferrer" title="Instagram">
+                <a href="https://www.instagram.com/securityshield_/" target="_blank" rel="noopener noreferrer"
+                    title="Instagram">
                     <i class='bx bxl-instagram'></i>
                 </a>
 
