Actualizacion salida a google

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         content="Protege tu infraestructura con bastionado avanzado, perfiles AppArmor y auditoría profesional.">
     <meta property="twitter:image" content="https://www.securityshield.es/images/social-preview.jpg">
 
-    <link rel="icon" type="image/jpg" href="images/shield_g.jpg">
+    <link rel="icon" href="https://www.securityshield.es/images/google.jpg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="https://www.securityshield.es/images/google.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -197,6 +198,18 @@
             }
         }
     </style>
+
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "SecurityShield",
+    "url": "https://www.securityshield.es",
+    "logo": "https://www.securityshield.es/images/google.jpg",
+    "image": "https://www.securityshield.es/images/social-preview.jpg",
+    "description": "Bastionado de sistemas Linux, defensa activa con AppArmor y auditoría de ciberseguridad."
+    }
+    </script>
 </head>
 
 <body>
