Añadiendo sistema de personalizacion de tema de cliente

--- a/pasarela.html
+++ b/pasarela.html
@@ -65,6 +65,7 @@
             }
         }
     </style>
+    <script src="js/theme.js"></script>
     <script>
         // VERIFICACIÓN DE SEGURIDAD
         fetch('api/check_session.php')
