--- a/planes.html
+++ b/planes.html
@@ -22,6 +22,7 @@
         content="Elige tu nivel de protección: Desde auditorías gratuitas hasta defensa empresarial completa.">
     <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
     <link rel="canonical" href="https://securityshield.es/planes">
+    <script src="js/theme.js"></script>
 </head>
 
 <body>
