--- a/principal.html
+++ b/principal.html
@@ -37,6 +37,7 @@
     "description": "Soluciones de ciberseguridad y hardening de servidores Linux."
     }
     </script>
+    <script src="js/theme.js"></script>
 </head>
 
 <body>
