ejecutar el script defer

--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
         content="Contacta con nuestros especialistas en hardening y seguridad ofensiva.">
     <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
     <link rel="canonical" href="https://securityshield.es/contacto">
-    <script src="js/theme.js"></script>
+    <script src="js/theme.js" defer></script>
 </head>
 
 <body>
