--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     "description": "Bastionado de sistemas Linux, defensa activa con AppArmor y auditoría de ciberseguridad."
     }
     </script>
-    <script src="js/theme.js"></script>
+    <script src="js/theme.js" defer></script>
 </head>
 
 <body>
