--- a/pasarela.html
+++ b/pasarela.html
@@ -65,7 +65,7 @@
             }
         }
     </style>
-    <script src="js/theme.js"></script>
+    <script src="js/theme.js" defer></script>
     <script>
         // VERIFICACIÓN DE SEGURIDAD
         fetch('api/check_session.php')
