--- a/registro.html
+++ b/registro.html
@@ -19,7 +19,7 @@
     <meta property="twitter:title" content="Crear Cuenta - SecurityShield">
     <meta property="twitter:description" content="Regístrate para acceder al panel de control.">
     <meta property="twitter:image" content="https://securityshield.es/images/social-preview.jpg">
-    <script src="js/theme.js"></script>
+    <script src="js/theme.js" defer></script>
 </head>
 
 <body>
