--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/jpg" href="images/shield_g.jpg">
-    <script src="js/theme.js"></script>
+    <script src="js/theme.js" defer></script>
 </head>
 
 <body>
